Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <h1>Proyecto de Apoyo a la Fundación</h1>
     <nav>
       <ul>
-        <li><a href="#resumen">Resumen</a></li>
-        <li><a href="#resultados">Resultados</a></li>
+        <li><a href="#beneficiaria">Beneficiaria</a></li>
+        <li><a href="#mentoria">Mentoria</a></li>
+        <li><a href="#equipointerno">Equipo Interno FQT</a></li>
         <li><a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
