--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
   <main>
     <section id="resumen">
       <h2>Resumen de la Investigación</h2>
-      <p>Este portal presenta los hallazgos principales de la investigación de mercado realizada para apoyar a la fundación.</p>
+      <div class="imagen-links">
+        <a href="#beneficiaria">
+          <img src="img/fqtempower1.jpg" alt="Empowerment" class="imagen-resumen">
+        </a>
+        <a href="#mentoria">
+          <img src="img/fqtconnect1.jpg" alt="Connect" class="imagen-resumen">
+        </a>
+      </div>
     </section>
 
     <section id="resultados">
