--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <h2>Resumen de la Investigación</h2>
       <div class="imagen-links">
         <a href="#beneficiaria">
-          <img src="img/fqtempower1.jpg" alt="Empowerment" class="imagen-resumen">
+          <img src="img/fqtempower1.png" alt="Empowerment" class="imagen-resumen">
         </a>
         <a href="#mentoria">
-          <img src="img/fqtconnect1.jpg" alt="Connect" class="imagen-resumen">
+          <img src="img/fqtconnect1.png" alt="Connect" class="imagen-resumen">
         </a>
       </div>
     </section>
