--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
     <h1>Proyecto de Apoyo a la Fundación</h1>
     <nav>
       <ul>
-        <li><a href="#beneficiaria">Beneficiaria</a></li>
-        <li><a href="#mentoria">Mentoria</a></li>
-        <li><a href="#equipointerno">Equipo Interno FQT</a></li>
         <li><a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
@@ -22,10 +19,10 @@
     <section id="resumen">
       <h2>Resumen de la Investigación</h2>
       <div class="imagen-links">
-        <a href="#beneficiaria">
+        <a href="pages/empower.html">
           <img src="img/fqtempower1.png" alt="Empowerment" class="imagen-resumen">
         </a>
-        <a href="#mentoria">
+        <a href="pages/connect.html">
           <img src="img/fqtconnect1.png" alt="Connect" class="imagen-resumen">
         </a>
       </div>
