--- a/pages/empower.html
+++ b/pages/empower.html
@@ -24,14 +24,27 @@
       <p>El empoderamiento es un proceso mediante el cual las personas adquieren mayor control sobre sus decisiones, desarrollan confianza en sus capacidades y participan activamente en su entorno. En el contexto de nuestra fundación, buscamos fortalecer la autonomía de las beneficiarias para que puedan alcanzar sus metas personales y profesionales.</p>
     </section>
 
-    <section id="impacto">
-      <h2>Impacto en la Fundación</h2>
-      <ul>
-        <li>Incremento en la autoestima y seguridad personal.</li>
-        <li>Mayor participación en programas de formación y empleabilidad.</li>
-        <li>Reducción de la dependencia institucional.</li>
-      </ul>
-    </section>
+    <section id="problema">
+        <h2>Problema Detectado</h2>
+        <p>La falta de un perfilamiento adecuado de las beneficiarias, junto con una interacción limitada con las mentoras, impide adaptar de manera efectiva la mentoría a las necesidades individuales. Esta situación limita la preparación real para el empleo y dificulta la medición global del impacto generado por Fundación Quiero Trabajo.</p>
+      </section>
+      
+      <section id="impacto">
+        <h2>Impacto en la Fundación</h2>
+        <ul>
+          <li>Incremento en la autoestima y seguridad personal.</li>
+          <li>Mayor participación en programas de formación y empleabilidad.</li>
+          <li>Reducción de la dependencia institucional.</li>
+        </ul>
+      </section>
+
+      <section id="solucion">
+        <h2>Solución Propuesta</h2>
+        <p>Digitalización del perfilamiento de las beneficiarias.</p>
+        <p>Se propone el diseño de un sistema inteligente de información que administre los perfiles completos mediante inteligencia artificial. Este sistema permitirá realizar simulaciones de entrevistas personalizadas, fortaleciendo tanto las habilidades técnicas como las emocionales antes del encuentro con la mentora.</p>
+        <p>Gracias a esta herramienta, se logra una preparación más efectiva y personalizada, alineada con las necesidades individuales de cada beneficiaria.</p>
+      </section>
+      
 
     <section id="contacto">
       <h2>Contacto</h2>
