--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
   </header>
 
   <main>
-    <section id="resumen">
-      <div class="imagen-links">
+    <section id="intro-video" class="video-botones">
+      <div class="video-container">
+        <video src="media/collage.mp4" autoplay muted loop playsinline></video>
+      </div>
+      <div class="imagen-links-vertical">
         <a href="pages/empower.html">
           <img src="img/fqtempower1.png" alt="Empowerment" class="imagen-resumen">
         </a>
@@ -26,6 +29,7 @@
         </a>
       </div>
     </section>
+    
 
    
 
